<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/vg_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="24dp"
            android:src="@drawable/weight_icn"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/header_text_result"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:textSize="54sp"
            android:maxLength="5"
            android:textStyle="bold"
            android:fontFamily="Roboto"
            tools:text="23.33"
            android:textColor="@color/white"/>


    </LinearLayout>


    <TextView
        android:id="@+id/tv_classification_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/tvResultLabel"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:visibility="visible" />

    <TextView

        android:id="@+id/tv_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#4CAF50"
        tools:text="NORMAL" />


</LinearLayout>